src/test/deca/context/invalid/op_arith_string.deca
//ERROR :4:
{
int messi=10;
float xavi = "aniesta"*messi;

}